fix(media): remove table double border issue

--- a/dotfiles/src/scripts/media_server/static/css/dashboard.css
+++ b/dotfiles/src/scripts/media_server/static/css/dashboard.css
@@ -200,7 +200,7 @@
 
 /* Rows */
 
-.data-row {
+.data-row:not(:last-of-type) {
     border-bottom: 1px solid var(--border-subtle);
 }
 
